@@ -1,3 +1,5 @@
 DIST winrm-fs-0.2.0.tar.gz 15854 SHA256 90ba5c84a9db466ae5c8b64c300bb36eb19f8742cc197484f7332e52a4dc0e00 SHA512 89135755d8d8de9f73547ade20687c147d96c14ed2ad5dc3c0f15baa104502a37aade4b3d176063e87ca2d9836101b9c707e5743a9c72dcdc25b97ddfe2903e9 WHIRLPOOL 6233a73749def78e222b5b9f759d48950e0e3bc79246ff813ce8b3f1df2963625faa61bc2b2bc627a7ee9f095a76cdceae68bc76ec96d60697dad7c81dc65b9d
+DIST winrm-fs-0.2.2.tar.gz 16262 SHA256 54626877c6dfc3d9180ce6ea351fa69de35b83de126037f928267d605653d457 SHA512 439ee25f3ec006c3a8ef71feec844f6263de6e2f2a9cb7b2a278c3af053d428a0030915b372b2252d4b2b1e5ebeb995c4834f5c8d88a2370a8b373ec8fd0fa7f WHIRLPOOL 35fdda7332a825f926b34e684f3348edd57d72275576e36e9c96ae10c30f0dcaa1a4ca66c2f498174322807f4afe0155632e11087180198356489dfb01bb204d
 EBUILD winrm-fs-0.2.0.ebuild 854 SHA256 2f33a2fa69edb7f6244fc1f471722fdc3cb1b79eb4d00bf03a98b9a0de0bddb5 SHA512 8b29563d0f2c1b0a1bc4a835492ab364aee6ab26fcc11af2094429d1dccb46aa480e400e7e693df31728dacbd7e41a1330c3edc9f6b5bc3b778f68942bd52dd5 WHIRLPOOL 21957b599b89d60df79282642f3e8ef22177b6cd41ecb5daf5ad24695184c1323572059ef7e113354689fb3df1a6b89d8d562db14d0db624868c6bd756899bdd
-MISC ChangeLog 353 SHA256 d9312bcc1c09e2a2250eddf20104033560011e59c2cc4ed4a903bd9b181fc41f SHA512 22630380cd696a074f9badaaec56e88256bbd179e3dce67b3e01fde83df5b7ef8304949204fa578dc3e5276691d39c5a756703b6696d1fe855dff55c42523604 WHIRLPOOL a110fd2f33d938ab5ae0786a315d6a7b939fcc9d02d23b44bed7b55728226d438c0a645734b52dc6961dc9f607d7ca99ce692af5cb63840bc5f9108805f31478
+EBUILD winrm-fs-0.2.2.ebuild 854 SHA256 2f33a2fa69edb7f6244fc1f471722fdc3cb1b79eb4d00bf03a98b9a0de0bddb5 SHA512 8b29563d0f2c1b0a1bc4a835492ab364aee6ab26fcc11af2094429d1dccb46aa480e400e7e693df31728dacbd7e41a1330c3edc9f6b5bc3b778f68942bd52dd5 WHIRLPOOL 21957b599b89d60df79282642f3e8ef22177b6cd41ecb5daf5ad24695184c1323572059ef7e113354689fb3df1a6b89d8d562db14d0db624868c6bd756899bdd
+MISC ChangeLog 477 SHA256 13bd2c4b33321b1e2cd1aadb5e18fb1b618239fd1046ba4b7acbdbe105d6cb5f SHA512 90d01b579997e4a8149b126527f0d2363d1148a6b134622c5c80d02ce213df723d6403a049fab0890f15d759a2c18c8ddc8e8bb9c31913f03ea69c56cbf307f8 WHIRLPOOL 987997406a931c86c368681265ad7c3ab088d2b8a6846e3f4a06505df26d1751062cc3721049e9f8e02684feba7beca60868a3247d7ee8102a7dd42117a8a17b
