@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*winrm-fs-0.2.2 (24 Dec 2015)
+
+  24 Dec 2015; Lionel Félicité <lfelicite@gentoo.org> +winrm-fs-0.2.2.ebuild:
+  close #12
+
   11 Aug 2015; <lfelicite@gentoo.org> winrm-fs-0.2.0.ebuild:
   refs #6
   fix version to 1.6.2
